<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroFragment">

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="301dp"
        android:layout_height="52dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/placeholder_fullname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="311dp"
        android:layout_height="78dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="46dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="Required"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/rgGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:startIconDrawable="@android:drawable/ic_dialog_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="341dp"
        android:layout_height="154dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <RadioButton
            android:id="@+id/rbtMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtmale" />

        <RadioButton
            android:id="@+id/rbtFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtfemale" />

        <RadioButton
            android:id="@+id/rbtOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtothers" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="312dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:text="@string/valbtnsave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry" />
</androidx.constraintlayout.widget.ConstraintLayout>